# HUNTER-v2

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/strategy/: twitter-growth-strategy.md
src/hunter/: __init__.py  cli.py  config.py  db.py  reader_client.py  twitter_client.py
src/hunter/agents/: analyst.py  base.py  community.py  creator.py  orchestrator.py  strategist.py
src/hunter/models/: schemas.py
tests/: test_db.py
