[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-v2"
version = "0.1.0"
description = "Twitter Growth Agent Team - AI-powered Twitter account growth system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "tweepy>=4.14.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
scheduler = [
    "apscheduler>=3.10.0",
]

[project.scripts]
hunter = "hunter.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
